--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <nav>
         <a href="#overview">Overview</a>
         <a href="#activities">Activities</a>
+        <a href="#tickets">Tickets</a>
         <a href="#qa">Q&A</a>
         <a href="#contact">Contact Us</a>
     </nav>
