--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
 </head>
 <body>
     <header>
+    <a href="https://packaged-media.redd.it/48gxqgrtwu0e1/pb/m2-res_720p.mp4?m=DASHPlaylist.mpd&v=1&e=1732557600&s=32984ff870218470c30d12a18dda601e99b4de2f" target="_blank" style="color: inherit; text-decoration: none;">
         Winter Wonderland
-    </header>
+    </a>
+</header>
+
 
     <nav>
         <a href="#overview">Overview</a>
