--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             box-shadow: 0 0 5px #222;
         }
         .activity img {
-            max-width: 30%;
+            max-width: 54%; /* Increased to 1.8x the original size */
             border-radius: 8px;
             margin-left: 10px;
         }
