--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         section {
             margin: 20px auto;
             width: 90%;
-            max-width: 800px;
+            max-width: 900px;
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 10px;
@@ -52,21 +52,21 @@
         .activities {
             display: flex;
             flex-wrap: wrap;
-            gap: 15px;
+            gap: 20px;
             justify-content: space-around;
         }
         .activity {
             background: rgba(255, 255, 255, 0.1);
-            padding: 15px;
+            padding: 20px;
             border-radius: 8px;
-            width: calc(60% - 20px);
+            width: calc(65% - 20px); /* Increased width of the box */
             display: flex;
             justify-content: space-between;
             align-items: center;
             box-shadow: 0 0 5px #222;
         }
         .activity img {
-            max-width: 54%; /* Increased to 1.8x the original size */
+            max-width: 97%; /* 1.8x larger than the previous size */
             border-radius: 8px;
             margin-left: 10px;
         }
