--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         section {
             margin: 20px auto;
             width: 90%;
-            max-width: 900px;
+            max-width: 1000px; /* Increased overall width */
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 10px;
@@ -59,16 +59,17 @@
             background: rgba(255, 255, 255, 0.1);
             padding: 20px;
             border-radius: 8px;
-            width: calc(65% - 20px); /* Increased width of the box */
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            width: calc(48% - 20px); /* Increased width of each activity box */
             box-shadow: 0 0 5px #222;
+            display: flex;
+            flex-direction: column; /* Ensure everything is stacked neatly */
+            align-items: center;
+            text-align: center;
         }
         .activity img {
-            max-width: 97%; /* 1.8x larger than the previous size */
+            max-width: 95%; /* Images remain proportional within their boxes */
             border-radius: 8px;
-            margin-left: 10px;
+            margin-bottom: 15px;
         }
         .activity h3 {
             color: #aad8e6;
@@ -130,32 +131,24 @@
     <h2>Activities</h2>
     <div class="activities">
         <div class="activity">
-            <div>
-                <h3>Forest Exploration</h3>
-                <p>Wander through snow-covered trees, uncover hidden secrets, and enjoy the beauty of nature.</p>
-            </div>
             <img src="forest.png" alt="Forest">
+            <h3>Forest Exploration</h3>
+            <p>Wander through snow-covered trees, uncover hidden secrets, and enjoy the beauty of nature.</p>
         </div>
         <div class="activity">
-            <div>
-                <h3>Cozy Campfires</h3>
-                <p>Gather around a warm fire under the stars, share stories, and enjoy roasted human flesh.</p>
-            </div>
             <img src="campfire.png" alt="Campfire">
+            <h3>Cozy Campfires</h3>
+            <p>Gather around a warm fire under the stars, share stories, and enjoy roasted human flesh.</p>
         </div>
         <div class="activity">
-            <div>
-                <h3>Animals</h3>
-                <p>Find animals in the forest! They are very fresh and alive.</p>
-            </div>
             <img src="animals.png" alt="Animals">
+            <h3>Animals</h3>
+            <p>Find animals in the forest! They are very fresh and alive.</p>
         </div>
         <div class="activity">
-            <div>
-                <h3>Neighbours</h3>
-                <p>Meet the friendly neighbour in the forest. They will totally not hurt you.</p>
-            </div>
             <img src="neighbours.png" alt="Neighbours">
+            <h3>Neighbours</h3>
+            <p>Meet the friendly neighbour in the forest. They will totally not hurt you.</p>
         </div>
     </div>
 </section>
