--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         section {
             margin: 20px auto;
             width: 90%;
-            max-width: 1000px;
+            max-width: 1000px; /* Adjusted for overall page width */
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 10px;
@@ -57,25 +57,29 @@
         }
         .activity {
             background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
+            padding: 15px;
             border-radius: 8px;
             width: calc(48% - 20px);
             box-shadow: 0 0 5px #222;
             display: flex;
             align-items: center;
-            justify-content: space-between; /* Space between text and image */
+            justify-content: space-between;
+            gap: 15px;
         }
         .activity img {
-            max-width: 50%; /* Image takes up 50% of the activity box width */
+            max-width: 40%; /* Image takes up 40% of the box */
             border-radius: 8px;
-            margin-left: 15px; /* Space between text and image */
         }
-        .activity h3 {
+        .activity-content {
+            flex: 1; /* The text content takes up the remaining space */
+            text-align: left; /* Aligns text to the left */
+        }
+        .activity-content h3 {
             color: #aad8e6;
+            margin: 0 0 10px;
         }
-        .activity-text {
-            max-width: 45%; /* Text content stays on the left */
-            text-align: left;
+        .activity-content p {
+            margin: 0;
         }
         footer {
             text-align: center;
@@ -111,28 +115,28 @@
     <h2>Activities</h2>
     <div class="activities">
         <div class="activity">
-            <div class="activity-text">
+            <div class="activity-content">
                 <h3>Forest Exploration</h3>
                 <p>Wander through snow-covered trees, uncover hidden secrets, and enjoy the beauty of nature.</p>
             </div>
             <img src="forest.png" alt="Forest">
         </div>
         <div class="activity">
-            <div class="activity-text">
+            <div class="activity-content">
                 <h3>Cozy Campfires</h3>
                 <p>Gather around a warm fire under the stars, share stories, and enjoy roasted human flesh.</p>
             </div>
             <img src="campfire.png" alt="Campfire">
         </div>
         <div class="activity">
-            <div class="activity-text">
+            <div class="activity-content">
                 <h3>Animals</h3>
                 <p>Find animals in the forest! They are very fresh and alive.</p>
             </div>
             <img src="animals.png" alt="Animals">
         </div>
         <div class="activity">
-            <div class="activity-text">
+            <div class="activity-content">
                 <h3>Neighbours</h3>
                 <p>Meet the friendly neighbour in the forest. They will totally not hurt you.</p>
             </div>
