--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         section {
             margin: 20px auto;
             width: 90%;
-            max-width: 1000px;
+            max-width: 800px;
             background: rgba(0, 0, 0, 0.7);
             padding: 20px;
             border-radius: 10px;
@@ -52,32 +52,26 @@
         .activities {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 15px;
             justify-content: space-around;
         }
         .activity {
             background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
+            padding: 15px;
             border-radius: 8px;
-            width: calc(48% - 20px); /* Adjusted width */
-            box-shadow: 0 0 5px #222;
+            width: calc(60% - 20px);
             display: flex;
-            flex-direction: row; /* Side-by-side layout for text and image */
+            justify-content: space-between;
             align-items: center;
-            justify-content: space-between; /* Space between text and image */
-            text-align: left;
+            box-shadow: 0 0 5px #222;
         }
         .activity img {
-            max-width: 90%; /* Increased image size */
-            height: auto;
+            max-width: 30%;
             border-radius: 8px;
+            margin-left: 10px;
         }
         .activity h3 {
             color: #aad8e6;
-            margin-bottom: 10px;
-        }
-        .activity p {
-            margin-bottom: 10px;
         }
         footer {
             text-align: center;
