--- a/index.html
+++ b/index.html
@@ -158,18 +158,18 @@
     <div class="employees">
         <div class="employee">
             <img src="employee1.png" alt="John">
-            <h3>John Doe</h3>
-            <p>John is your friendly guide who knows every corner of the forest. With over 10 years of experience, he ensures your adventure is safe and fun.</p>
+            <h3>ExtremeOWS</h3>
+            <p>Extreme is your friendly guide who knows every corner of the forest. With over 10 years of experience, he will check on you from time to time.</p>
         </div>
         <div class="employee">
             <img src="employee2.png" alt="Jane">
-            <h3>Jane Smith</h3>
-            <p>Jane is our wildlife expert who will help you discover and interact with the forest's creatures. She's passionate about nature and storytelling.</p>
+            <h3>Steve</h3>
+            <p>Steve is one of our fan favorite employee, he is famous for his classic catch line, "I... Am steve"</p>
         </div>
         <div class="employee">
             <img src="employee3.png" alt="Alice">
-            <h3>Alice Brown</h3>
-            <p>Alice is the campfire master. She specializes in creating cozy atmospheres and unforgettable moments under the stars.</p>
+            <h3>Xiao Ling</h3>
+            <p>Xiao Ling is the campfire master. He specializes in creating cozy atmospheres and unforgettable moments under the stars.</p>
         </div>
     </div>
 </section>
