--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <h2>Book Your Tickets</h2>
     <p>Ready for your adventure? Book your tickets today and enjoy the magical Winter Wonderland experience!</p>
     <p>Tickets are <strong>FREE!</strong> except for short people. You'll also get a starter kit to help you on your winter adventure!</p>
-    <a href="https://www.youtube.com/watch?app=desktop&v=MKc6w-iKiZg" target="_blank">Book Now</a>
+    <a href="ticket.html" class="tickets-button" target="_blank">Tickets</a>
 </section>
 
 <section id="qa">
