--- a/ticket.html
+++ b/ticket.html
@@ -65,13 +65,6 @@
             color: #f8f8f2;
             font-size: 16px;
         }
-        /* Ensure consistent width for both input fields and dropdowns */
-        .form-container select {
-            width: 100%;
-        }
-        .form-container input[type="number"] {
-            width: 100%;
-        }
         .form-container button {
             background-color: #aad8e6;
             border: none;
@@ -87,11 +80,52 @@
             margin: 20px 0;
             color: #c7c7c7;
         }
-        .error-message {
-            color: red;
-            font-size: 18px;
-            font-weight: bold;
+        /* Modal styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background-color: #222;
+            padding: 20px;
+            border-radius: 10px;
             text-align: center;
+            position: relative;
+        }
+        .modal-content video {
+            width: 100%;
+            max-width: 600px;
+            border-radius: 10px;
+        }
+        /* Text overlay */
+        .video-overlay {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #f8f8f2;
+            font-size: 24px;
+            font-weight: bold;
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 10px;
+            border-radius: 10px;
+        }
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            color: #f8f8f2;
+            font-size: 24px;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -113,7 +147,7 @@
     <p>Ready to visit Winter Wonderland? Choose the number of tickets you'd like and complete the form below to purchase your tickets!</p>
     
     <div class="form-container">
-        <form id="ticket-form" action="thankyou.html" method="POST" onsubmit="return validateForm()">
+        <form id="ticket-form" onsubmit="return showPopup(event)">
             <label for="name">Username</label>
             <input type="text" id="name" name="name" required placeholder="Enter your Username">
 
@@ -137,14 +171,43 @@
 
             <button type="submit">Complete Purchase</button>
         </form>
-        <div id="error-message" class="error-message" style="display: none;">The amount of girlfriends/boyfriends is false. Please enter the correct amount!</div>
     </div>
 </section>
+
+<!-- Modal -->
+<div id="video-modal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closePopup()">&times;</span>
+        <div class="video-overlay">You’re getting your ticket after this sponsor</div>
+        <video id="NordVPN-video" controls autoplay>
+            <source src="NordVPN.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
 
 <footer>
     © 2024 Winter Wonderland. All Rights Reserved.
 </footer>
 
+<script>
+    function showPopup(event) {
+        event.preventDefault(); // Prevent form submission
+        const modal = document.getElementById('video-modal');
+        const video = document.getElementById('NordVPN-video');
+        modal.style.display = 'flex';
+        video.play();
+        return false;
+    }
+
+    function closePopup() {
+        const modal = document.getElementById('video-modal');
+        const video = document.getElementById('NordVPN-video');
+        modal.style.display = 'none';
+        video.pause();
+        video.currentTime = 0; // Reset video playback
+    }
+</script>
 
 </body>
 </html>
