--- a/ticket.html
+++ b/ticket.html
@@ -179,7 +179,7 @@
     <div class="modal-content">
         <span class="close" onclick="closePopup()">&times;</span>
         <div class="video-overlay">You’re getting your ticket after this sponsor</div>
-        <video id="NordVPN-video" controls autoplay>
+        <video id="NordVPN-video" controls>
             <source src="NordVPN.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
