--- a/ticket.html
+++ b/ticket.html
@@ -134,7 +134,7 @@
 <script>
     function redirectToSponsor(event) {
         event.preventDefault(); // Prevent form submission
-        window.location.href = "video.html"; // Redirect to the sponsor video page
+        window.location.href = "NordVPN.html"; // Redirect to the sponsor video page
         return false;
     }
 </script>
